--- a/index.html
+++ b/index.html
@@ -35,68 +35,76 @@
       <div class="main__content">
         <div class="row g-4">
           <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
+            <a href="login.html" class="text-decoration-none">
+              <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+                <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+                <h5 class="text-white pt-3">Coin Name</h5>
+              </div>
+            </a>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-3">
+            <a href="sign-up.html" class="text-decoration-none">
             <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
               <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
               <h5 class="text-white pt-3">Coin Name</h5>
             </div>
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a href="announce.html" class="text-decoration-none">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a href="referral.html" class="text-decoration-none">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
-              <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
-              <h5 class="text-white pt-3">Coin Name</h5>
-            </div>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
           </div>
         </div>
-        <div>
-          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor"
-            class="bi bi-hexagon-fill icon" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M8.5.134a1 1 0 0 0-1 0l-6 3.577a1 1 0 0 0-.5.866v6.846a1 1 0 0 0 .5.866l6 3.577a1 1 0 0 0 1 0l6-3.577a1 1 0 0 0 .5-.866V4.577a1 1 0 0 0-.5-.866L8.5.134z" />
-          </svg>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="text-center d-flex flex-column justify-content-center align-items-center p-3 item">
+            <img src="assets/img/img1.png" class="img-fluid" width="100px" height="100px" alt="bitcoin">
+            <h5 class="text-white pt-3">Coin Name</h5>
+          </div>
         </div>
       </div>
-      <p class="text-white text-center my-5 fw-lighter">&copy; Copyright 2022</p>
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor"
+          class="bi bi-hexagon-fill icon" viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="M8.5.134a1 1 0 0 0-1 0l-6 3.577a1 1 0 0 0-.5.866v6.846a1 1 0 0 0 .5.866l6 3.577a1 1 0 0 0 1 0l6-3.577a1 1 0 0 0 .5-.866V4.577a1 1 0 0 0-.5-.866L8.5.134z" />
+        </svg>
+      </div>
     </div>
+    <p class="text-white text-center my-5 fw-lighter">&copy; Copyright 2022</p>
+  </div>
 
 
-    <!-- Vendor JS File -->
-    <script src="assets/vendor/js/bootstrap.min.js"></script>
+  <!-- Vendor JS File -->
+  <script src="assets/vendor/js/bootstrap.min.js"></script>
 </body>
 
 </html>
